13-GKE-Gateway-API-Global-LB-Basic/01-myapp3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #Dictionary
  name: myapp3-deployment
spec:
  # Dictionary
  replicas: 2
  selector:
    matchLabels:
      app: myapp3
  template:
    metadata:
      # Dictionary
      name: myapp3-pod
      labels:
        # Dictionary
        app: myapp3 # Key value pairs
    spec:
      containers:
      # List
      - name: myapp3-container
        image: aslam24/nginx-web-onix:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "20Mi" # 128 MebiByte is equal to 135 Megabyte (MB)
            cpu: "20m" # `m` means milliCPU
          limits:
            memory: "30Mi"
            cpu: "30m" # 1000m is equal to 1 VCPU core
