13-GKE-Gateway-API-Global-LB-Basic/02-myapp3-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp3-service
spec:
  type: ClusterIP # ClusterIP, # NodePort # LoadBalancer
  selector:
    app: myapp3
  ports:
  - name: http
    port: 80 # Service Port
    targetPort: 80 # Container Port
