13-GKE-Gateway-API-Global-LB-Basic/04-myapp3-gateway-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: route-external-global-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-global
  rules:
  - backendRefs:
    - name: myapp3-service
      port: 80
